[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["sinofseven <em.s.00001@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3-stubs = {version = "1.34.27", extras = ["dynamodb", "s3", "sqs", "ssm"]}
boto3 = "1.34.27"
requests = "2.31.0"
pysocks = "1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
